sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_with_sym_alias_debug.llvm-ir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph {
    Ty: "Directed",
    node_count: 7,
    edge_count: 6,
    edges: (2, 1), (1, 3), (5, 4), (4, 2), (0, 6), (6, 5),
    node weights: {
        0: Edge(
            FreeVar(
                Symbol {
                    symbol: "some_function",
                },
            ),
        ),
        1: Thunk(
            Graph {
                Ty: "Directed",
                node_count: 3,
                edge_count: 2,
                edges: (0, 1), (1, 2),
                node weights: {
                    0: Edge(
                        FreeVar(
                            Symbol {
                                symbol: "alias_func",
                            },
                        ),
                    ),
                    1: Thunk(
                        Graph {
                            Ty: "Directed",
                            node_count: 9,
                            edge_count: 8,
                            edges: (2, 1), (1, 3), (5, 4), (6, 4), (4, 2), (7, 6), (0, 8), (8, 5),
                            node weights: {
                                0: Edge(
                                    FreeVar(
                                        Symbol {
                                            symbol: "alias_func",
                                        },
                                    ),
                                ),
                                1: Operation(
                                    Terminator(
                                        Ret(
                                            Ret {
                                                return_operand: Some(
                                                    LocalOperand {
                                                        name: Name(
                                                            "result",
                                                        ),
                                                        ty: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                debugloc: None,
                                            },
                                        ),
                                    ),
                                ),
                                2: Edge(
                                    BoundVar(
                                        Var {
                                            name: Name(
                                                "result",
                                            ),
                                        },
                                    ),
                                ),
                                3: Edge(
                                    CF(
                                        None,
                                    ),
                                ),
                                4: Operation(
                                    Instruction(
                                        Call(
                                            Call {
                                                function: Right(
                                                    ConstantOperand(
                                                        ConstantRef(
                                                            GlobalReference {
                                                                name: Name(
                                                                    "alias_func",
                                                                ),
                                                                ty: TypeRef(
                                                                    FuncType {
                                                                        result_type: TypeRef(
                                                                            IntegerType {
                                                                                bits: 32,
                                                                            },
                                                                        ),
                                                                        param_types: [
                                                                            TypeRef(
                                                                                IntegerType {
                                                                                    bits: 32,
                                                                                },
                                                                            ),
                                                                        ],
                                                                        is_var_arg: false,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                ),
                                                function_ty: TypeRef(
                                                    FuncType {
                                                        result_type: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                        param_types: [
                                                            TypeRef(
                                                                IntegerType {
                                                                    bits: 32,
                                                                },
                                                            ),
                                                        ],
                                                        is_var_arg: false,
                                                    },
                                                ),
                                                arguments: [
                                                    (
                                                        ConstantOperand(
                                                            ConstantRef(
                                                                Int {
                                                                    bits: 32,
                                                                    value: 42,
                                                                },
                                                            ),
                                                        ),
                                                        [],
                                                    ),
                                                ],
                                                return_attributes: [],
                                                dest: Some(
                                                    Name(
                                                        "result",
                                                    ),
                                                ),
                                                function_attributes: [],
                                                is_tail_call: false,
                                                calling_convention: C,
                                                debugloc: None,
                                            },
                                        ),
                                    ),
                                ),
                                5: Edge(
                                    Nil,
                                ),
                                6: Edge(
                                    Nil,
                                ),
                                7: Operation(
                                    Constant(
                                        ConstantRef(
                                            Int {
                                                bits: 32,
                                                value: 42,
                                            },
                                        ),
                                    ),
                                ),
                                8: Operation(
                                    Constant(
                                        ConstantRef(
                                            GlobalReference {
                                                name: Name(
                                                    "alias_func",
                                                ),
                                                ty: TypeRef(
                                                    FuncType {
                                                        result_type: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                        param_types: [
                                                            TypeRef(
                                                                IntegerType {
                                                                    bits: 32,
                                                                },
                                                            ),
                                                        ],
                                                        is_var_arg: false,
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                            },
                            edge weights: {
                                0: 0,
                                1: 0,
                                2: 0,
                                3: 1,
                                4: 0,
                                5: 0,
                                6: 0,
                                7: 0,
                            },
                        },
                    ),
                    2: Edge(
                        CF(
                            None,
                        ),
                    ),
                },
                edge weights: {
                    0: 0,
                    1: 0,
                },
            },
        ),
        2: Edge(
            FreeVar(
                Symbol {
                    symbol: "alias_func",
                },
            ),
        ),
        3: Edge(
            FreeVar(
                Symbol {
                    symbol: "main",
                },
            ),
        ),
        4: Operation(
            GlobalAlias(
                GlobalAlias {
                    name: Name(
                        "alias_func",
                    ),
                    aliasee: ConstantRef(
                        GlobalReference {
                            name: Name(
                                "some_function",
                            ),
                            ty: TypeRef(
                                FuncType {
                                    result_type: TypeRef(
                                        IntegerType {
                                            bits: 32,
                                        },
                                    ),
                                    param_types: [
                                        TypeRef(
                                            IntegerType {
                                                bits: 32,
                                            },
                                        ),
                                    ],
                                    is_var_arg: false,
                                },
                            ),
                        },
                    ),
                    linkage: External,
                    visibility: Default,
                    ty: TypeRef(
                        PointerType {
                            addr_space: 0,
                        },
                    ),
                    addr_space: 0,
                    dll_storage_class: Default,
                    thread_local_mode: NotThreadLocal,
                    unnamed_addr: None,
                },
            ),
        ),
        5: Edge(
            Nil,
        ),
        6: Operation(
            Constant(
                ConstantRef(
                    GlobalReference {
                        name: Name(
                            "some_function",
                        ),
                        ty: TypeRef(
                            FuncType {
                                result_type: TypeRef(
                                    IntegerType {
                                        bits: 32,
                                    },
                                ),
                                param_types: [
                                    TypeRef(
                                        IntegerType {
                                            bits: 32,
                                        },
                                    ),
                                ],
                                is_var_arg: false,
                            },
                        ),
                    },
                ),
            ),
        ),
    },
    edge weights: {
        0: 0,
        1: 0,
        2: 0,
        3: 0,
        4: 0,
        5: 0,
    },
}
