sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_with_sym_diverge_debug.llvm-ir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph {
    Ty: "Directed",
    node_count: 2,
    edge_count: 2,
    edges: (1, 0), (0, 1),
    node weights: {
        0: Thunk(
            Graph {
                Ty: "Directed",
                node_count: 3,
                edge_count: 2,
                edges: (0, 1), (1, 2),
                node weights: {
                    0: Edge(
                        FreeVar(
                            Symbol {
                                symbol: "diverge",
                            },
                        ),
                    ),
                    1: Thunk(
                        Graph {
                            Ty: "Directed",
                            node_count: 7,
                            edge_count: 6,
                            edges: (2, 1), (1, 3), (5, 4), (4, 2), (0, 6), (6, 5),
                            node weights: {
                                0: Edge(
                                    FreeVar(
                                        Symbol {
                                            symbol: "diverge",
                                        },
                                    ),
                                ),
                                1: Operation(
                                    Terminator(
                                        Ret(
                                            Ret {
                                                return_operand: Some(
                                                    LocalOperand {
                                                        name: Name(
                                                            "tmp1",
                                                        ),
                                                        ty: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                    },
                                                ),
                                                debugloc: None,
                                            },
                                        ),
                                    ),
                                ),
                                2: Edge(
                                    BoundVar(
                                        Var {
                                            name: Name(
                                                "tmp1",
                                            ),
                                        },
                                    ),
                                ),
                                3: Edge(
                                    CF(
                                        None,
                                    ),
                                ),
                                4: Operation(
                                    Instruction(
                                        Call(
                                            Call {
                                                function: Right(
                                                    ConstantOperand(
                                                        ConstantRef(
                                                            GlobalReference {
                                                                name: Name(
                                                                    "diverge",
                                                                ),
                                                                ty: TypeRef(
                                                                    FuncType {
                                                                        result_type: TypeRef(
                                                                            IntegerType {
                                                                                bits: 32,
                                                                            },
                                                                        ),
                                                                        param_types: [],
                                                                        is_var_arg: false,
                                                                    },
                                                                ),
                                                            },
                                                        ),
                                                    ),
                                                ),
                                                function_ty: TypeRef(
                                                    FuncType {
                                                        result_type: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                        param_types: [],
                                                        is_var_arg: false,
                                                    },
                                                ),
                                                arguments: [],
                                                return_attributes: [],
                                                dest: Some(
                                                    Name(
                                                        "tmp1",
                                                    ),
                                                ),
                                                function_attributes: [],
                                                is_tail_call: false,
                                                calling_convention: C,
                                                debugloc: None,
                                            },
                                        ),
                                    ),
                                ),
                                5: Edge(
                                    Nil,
                                ),
                                6: Operation(
                                    Constant(
                                        ConstantRef(
                                            GlobalReference {
                                                name: Name(
                                                    "diverge",
                                                ),
                                                ty: TypeRef(
                                                    FuncType {
                                                        result_type: TypeRef(
                                                            IntegerType {
                                                                bits: 32,
                                                            },
                                                        ),
                                                        param_types: [],
                                                        is_var_arg: false,
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                            },
                            edge weights: {
                                0: 0,
                                1: 0,
                                2: 0,
                                3: 0,
                                4: 0,
                                5: 0,
                            },
                        },
                    ),
                    2: Edge(
                        CF(
                            None,
                        ),
                    ),
                },
                edge weights: {
                    0: 0,
                    1: 0,
                },
            },
        ),
        1: Edge(
            FreeVar(
                Symbol {
                    symbol: "diverge",
                },
            ),
        ),
    },
    edge weights: {
        0: 0,
        1: 0,
    },
}
