sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_with_sym_simple.mlir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Op(
      name: "builtin.module",
      successors: [],
      attributes: "",
      sym_name: None,
      symbols: [],
    )),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Operation(Op(
          name: "func.func",
          successors: [],
          attributes: "{function_type = (i64, i1) -> i64, sym_name = \"simple\"}",
          sym_name: Some("simple"),
          symbols: [],
        )),
        Edge(Nil),
        Edge(FreeVar(Symbol(Symbol("simple")))),
        Thunk(Graph(
          nodes: [
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Var(
                  id: "%2",
                ))),
                Edge(BoundVar(Var(
                  id: "%3",
                ))),
                Operation(Op(
                  name: "func.return",
                  successors: [],
                  attributes: "",
                  sym_name: None,
                  symbols: [],
                )),
                Edge(BoundVar(Var(
                  id: "%4",
                ))),
                Edge(CF(None)),
                Operation(Op(
                  name: "arith.addi",
                  successors: [],
                  attributes: "{overflowFlags = #arith.overflow<none>}",
                  sym_name: None,
                  symbols: [],
                )),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((3, 2, 0)),
                Some((2, 4, 0)),
                Some((0, 5, 0)),
                Some((1, 5, 1)),
                Some((5, 3, 0)),
              ],
            )),
            Edge(CF(Some(BlockAddr("^bb4")))),
            Edge(CF(None)),
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Var(
                  id: "%arg0",
                ))),
                Edge(BoundVar(Var(
                  id: "%1",
                ))),
                Operation(Op(
                  name: "cf.br",
                  successors: [
                    BlockAddr("^bb4"),
                  ],
                  attributes: "",
                  sym_name: None,
                  symbols: [],
                )),
                Edge(CF(Some(BlockAddr("^bb4")))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((1, 2, 0)),
                Some((0, 2, 1)),
                Some((2, 3, 0)),
              ],
            )),
            Edge(BoundVar(Var(
              id: "%arg0",
            ))),
            Edge(CF(Some(BlockAddr("^bb3")))),
            Edge(CF(Some(BlockAddr("^bb3")))),
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Var(
                  id: "%arg0",
                ))),
                Operation(Op(
                  name: "cf.br",
                  successors: [
                    BlockAddr("^bb3"),
                  ],
                  attributes: "",
                  sym_name: None,
                  symbols: [],
                )),
                Edge(BoundVar(Var(
                  id: "%0",
                ))),
                Edge(CF(Some(BlockAddr("^bb3")))),
                Operation(Op(
                  name: "arith.addi",
                  successors: [],
                  attributes: "{overflowFlags = #arith.overflow<none>}",
                  sym_name: None,
                  symbols: [],
                )),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((2, 1, 0)),
                Some((1, 3, 0)),
                Some((0, 4, 0)),
                Some((0, 4, 1)),
                Some((4, 2, 0)),
              ],
            )),
            Edge(CF(Some(BlockAddr("^bb2")))),
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Var(
                  id: "%arg0",
                ))),
                Operation(Op(
                  name: "cf.br",
                  successors: [
                    BlockAddr("^bb3"),
                  ],
                  attributes: "",
                  sym_name: None,
                  symbols: [],
                )),
                Edge(CF(Some(BlockAddr("^bb3")))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((0, 1, 0)),
                Some((1, 2, 0)),
              ],
            )),
            Edge(CF(Some(BlockAddr("^bb1")))),
            Thunk(Graph(
              nodes: [
                Edge(BoundVar(Var(
                  id: "%arg0",
                ))),
                Edge(BoundVar(Var(
                  id: "%arg1",
                ))),
                Operation(Op(
                  name: "cf.cond_br",
                  successors: [
                    BlockAddr("^bb1"),
                    BlockAddr("^bb2"),
                  ],
                  attributes: "{operandSegmentSizes = array<i32: 1, 0, 0>}",
                  sym_name: None,
                  symbols: [],
                )),
                Edge(CF(Some(BlockAddr("^bb1")))),
                Edge(CF(Some(BlockAddr("^bb2")))),
              ],
              node_holes: [],
              edge_property: directed,
              edges: [
                Some((1, 2, 0)),
                Some((2, 3, 0)),
                Some((2, 4, 1)),
              ],
            )),
          ],
          node_holes: [],
          edge_property: directed,
          edges: [
            Some((1, 0, 0)),
            Some((0, 2, 0)),
            Some((4, 3, 0)),
            Some((5, 3, 1)),
            Some((6, 3, 2)),
            Some((3, 1, 0)),
            Some((4, 7, 0)),
            Some((8, 7, 1)),
            Some((7, 6, 0)),
            Some((4, 9, 0)),
            Some((10, 9, 1)),
            Some((9, 5, 0)),
            Some((11, 10, 0)),
            Some((11, 8, 1)),
            Some((11, 4, 2)),
          ],
        )),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((1, 0, 0)),
        Some((0, 2, 0)),
        Some((3, 1, 0)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 1, 0)),
  ],
)
