sd-core/src/language/snapshots/sd_core__language__tests__hypergraph_with_sym_sym.mlir.snap
---
source: sd-core/src/language/mod.rs
expression: to_pet(&graph)
---
Graph(
  nodes: [
    Operation(Op(
      name: "builtin.module",
      successors: [],
      attributes: "",
      sym_name: None,
      symbols: [],
    )),
    Edge(Nil),
    Thunk(Graph(
      nodes: [
        Operation(Op(
          name: "b",
          successors: [],
          attributes: "{attr = @test}",
          sym_name: None,
          symbols: [
            "test",
          ],
        )),
        Edge(FreeVar(Symbol(Symbol("test")))),
        Edge(BoundVar(Var(
          id: "%1",
        ))),
        Operation(Op(
          name: "a",
          successors: [],
          attributes: "{sym_name = \"test\"}",
          sym_name: Some("test"),
          symbols: [],
        )),
        Edge(BoundVar(Var(
          id: "%0",
        ))),
      ],
      node_holes: [],
      edge_property: directed,
      edges: [
        Some((1, 0, 0)),
        Some((0, 2, 0)),
        Some((3, 4, 0)),
        Some((3, 1, 1)),
      ],
    )),
  ],
  node_holes: [],
  edge_property: directed,
  edges: [
    Some((1, 0, 0)),
    Some((2, 1, 0)),
  ],
)
